# pogo_control

./: .gitignore  README.md  calibration.py  client.py  main.py  pyproject.toml  requirements.txt  server.py  test.py  test_asyncio.py
camera_calibration_files/: picamera-module-3.json  pogo-camera.json
client/: client.py  model.py  run.py  sample.py
client/gcs_interface/: __init__.py  loader.py  model.py  rollout.py
filters/: butterworth.py  low_pass.py  tests.py
integration_tests/: gcs_workflow.py  sample.py  upload_model.py
requirements/: client.txt  server.txt
server/: channel.py  mpu6050_interface.py  pid.py  piggpio_async_servo_interface.py  piggpio_servo_interface.py
src/: config.py  mpu6050_interface.py  piggpio_servo_interface.py
src/calibration/: __init__.py  data.py  filter.py  functions.py  measurement.py  mock_client.py  plot_orientation_3d.py  plot_pose_readings.py  plot_sense_readings.py
src/cli/: __init__.py
src/client/: __init__.py  client.py  client_interface.py  functions.py  model.py  multi_client.py  noise.py  rollout.py  run.py  sample.py  setup.py
src/filters/: butterworth.py  complementary.py  identity.py  kalman.py  low_pass.py  simple_velocity.py
src/networking_utils/: channel.py  client.py  loop.py
src/readings/: __init__.py  data.py  measurement.py  mock_client.py  plot_pose_readings.py  plot_sense_readings.py
testing/: plot_mpu.py  upload_model.py
tests/: mock_client.py  model_filter.py  rollout.py  test_actor_filter.py  test_asyncio_1.py  test_asyncio_2.py  test_pogo.py  test_remote_loader.py  test_sample.py
(+44 files in other folders)
